--- a/Front-end/css/style.css
+++ b/Front-end/css/style.css
@@ -1,201 +1,230 @@
 body {
-    font-family: 'Rubik', sans-serif;
-    font-weight: bold;
-    text-align: center;
+  font-family: "Rubik", sans-serif;
+  font-weight: bold;
+  text-align: center;
 }
-.maxwidth{
-    max-width: 77.25em ;
-    margin-left: auto;
-    margin-right: auto;
+.maxwidth {
+  max-width: 77.25em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#top-header {
-    height: 120px;
-    width: 1663px;
-    background: #080E45;
-    position: relative;
+.top-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  min-height: 120px;
+  background: #080e45;
 }
 .logo {
-    margin: 13px 0 0 180px;
-    float: left;
-}
-.top-nav {
-    position: absolute;
-    top: 0;
-    right: 0;
+  width: 100%;
+  height: 95px;
 }
 .top-nav ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 .top-nav li {
-    list-style: none;
-    display: inline-block;
-    margin: 50px 15px 0 0;
-    padding: 15px;
+  list-style: none;
+  display: inline-block;
+  margin: 30px 15px 0 0;
+  padding: 15px;
 }
 .top-nav a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    letter-spacing: 0.8px;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  letter-spacing: 0.8px;
 }
 .top-nav a:hover {
-    color: #FF8314;
-    transition: #FF8314 .3s linear;
+  color: #ff8314;
+  transition: #ff8314 0.3s linear;
 }
-.main-title {
-    text-transform: uppercase;
-    color: #080E45;
-    font-size: 23px; 
+
+@media screen and (max-width: 760px) {
+  .top-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .top-header > div {
+    display: none;
+  }
+  .top-nav ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .top-nav ul li {
+    margin: 0;
+    padding: 10px;
+  }
 }
-.titles {
-    color: #080E45;
-    font-size: 23px;   
+
+.banner {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../assets/website_cover.jpg");
+  background-repeat: no-repeat;
 }
-.text{
-    position: absolute;
-    color:#fff;
-    top: 80px;
-    width: 250px;
-    line-height: 55px;
-    padding: 120px;
-    font-family: 'Oxanium', cursive;
-    font-size: 18px;
-    letter-spacing: 3px;
-    text-shadow: 2px 2px 2px #080E45;
+
+.banner h1 {
+  text-align: left;
+  margin-top: 0;
+  color: #fff;
+  top: 80px;
+  max-width: 400px;
+  line-height: 60px;
+  padding: 120px;
+  font-family: "Oxanium", cursive;
+  font-size: 48px;
+  letter-spacing: 3px;
+  text-shadow: 2px 2px 2px #080e45;
 }
-.col-1_4{
-    display: inline-block;
-    margin-right: 20px;
-    padding-top: 30px;
+
+@media screen and (max-width: 760px) {
+  .banner h1 {
+    font-size: 25px;
+    line-height: 35px;
+  }
 }
-.box{
-    border: 4px solid #080E45;
-    box-shadow: 0 0 15px -6px black;
-    width: 206px;
-    height: 338px;
-    border-radius: 50px;
+
+.col-1_4 {
+  display: inline-block;
+  margin-right: 20px;
+  padding-top: 30px;
 }
-.box-middle{
-    border: 4px solid #080E45;
-    box-shadow: 0 0 15px -6px black;
-    width: 206px;
-    height: 338px;
-    border-radius: 50px;
-    background: #60ECFF;
+.box {
+  border: 4px solid #080e45;
+  box-shadow: 0 0 15px -6px black;
+  width: 206px;
+  height: 338px;
+  border-radius: 50px;
+}
+.box-middle {
+  border: 4px solid #080e45;
+  box-shadow: 0 0 15px -6px black;
+  width: 206px;
+  height: 338px;
+  border-radius: 50px;
+  background: #60ecff;
 }
 .number {
-    font-size: 65px;
-    color: #080E45;
-    text-shadow: 3px 3px 5px rgba(15, 15, 15, 0.329);
-    line-height: 90px;
+  font-size: 65px;
+  color: #080e45;
+  text-shadow: 3px 3px 5px rgba(15, 15, 15, 0.329);
+  line-height: 90px;
 }
 .mega {
-    display: block;
-    color: #080E45;
-    font-size: 19px;
-    text-shadow: 2px 2px 5px rgba(15, 15, 15, 0.329);
+  display: block;
+  color: #080e45;
+  font-size: 19px;
+  text-shadow: 2px 2px 5px rgba(15, 15, 15, 0.329);
 }
 .p-wifi {
-    color: #080E45;
-    font-size: 18px;
-    text-transform: uppercase;
+  color: #080e45;
+  font-size: 18px;
+  text-transform: uppercase;
 }
 .price {
-    font-size: 35px;
-    color: #FF8314;
+  font-size: 35px;
+  color: #ff8314;
 }
-.button-sign, .button-sign-middle {
-    color: white;
-    font-size: 18px;
-    background: #FF8314;
-    border-style: solid;
-    border-color: transparent;
-    border-width: 10px;
-    border-radius: 30px;
-    padding-left: 20px;
-    padding-right: 20px;
-    cursor: pointer;
+.button-sign,
+.button-sign-middle {
+  color: white;
+  font-size: 18px;
+  background: #ff8314;
+  border-style: solid;
+  border-color: transparent;
+  border-width: 10px;
+  border-radius: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  cursor: pointer;
 }
 .button-sign:hover {
-    background: #0CDDE8;
-    transition: #0CDDE8 .3s linear;
+  background: #0cdde8;
+  transition: #0cdde8 0.3s linear;
 }
 .button-sign-middle:hover {
-    background-color: white;
-    color: #FF8314;
-    transition: #FF8314 .3s linear;
+  background-color: white;
+  color: #ff8314;
+  transition: #ff8314 0.3s linear;
 }
 .titlep {
-    color: #080E45;
-    font-size: 18px;
+  color: #080e45;
+  font-size: 18px;
 }
 .main-content {
-    background: #E0E0E0;
-    margin-top: 50px;
-    height: 450px;
-    padding: 1px;
+  background: #e0e0e0;
+  margin-top: 50px;
+  height: 450px;
+  padding: 1px;
 }
 .col-1_2 {
-    display: inline-block;
-    margin: 0 100px;
-    padding-top: 20px;
+  display: inline-block;
+  margin: 0 100px;
+  padding-top: 20px;
 }
 .main-content-title {
-    font-size: 17px;
-    color: #FF8314;
+  font-size: 17px;
+  color: #ff8314;
 }
-.main-content-article span[class^=icon] {
-    font-size: 32px;
-    color: #FF8314;
+.main-content-article span[class^="icon"] {
+  font-size: 32px;
+  color: #ff8314;
 }
 .main-content-article p {
-    color: #080E45;
+  color: #080e45;
 }
 .company-title {
-     font-size: 25px;
-     color: #080E45;
+  font-size: 25px;
+  color: #080e45;
 }
 .content-p {
-    font-size: 15px;
-    color: #090808;
+  font-size: 15px;
+  color: #090808;
 }
 .icon {
-    font-size: 35px;
-    color: #080E45;
+  font-size: 35px;
+  color: #080e45;
 }
 .main-footer {
-    background: #080E45;
-    bottom: 0;
-    left: 0;
+  background: #080e45;
+  bottom: 0;
+  left: 0;
 }
 .ul-icons {
-    display: inline-block;
-    font-size: 30px;
+  display: inline-block;
+  font-size: 30px;
 }
 .main-footer {
-    padding: 1px;
+  padding: 1px;
 }
 
 .main-footer ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 .footer-nav li {
-    list-style: none;
-    display: inline-block;
-    margin: 5px 0 0 0;
-    padding: 2;
+  list-style: none;
+  display: inline-block;
+  margin: 5px 0 0 0;
+  padding: 2;
 }
 
 .footer-p {
-    color: #fff;
-    font-size: 17px;
+  color: #fff;
+  font-size: 17px;
 }
 .icon-facebook {
-    color: rgb(54, 135, 241);
+  color: rgb(54, 135, 241);
 }
 .icon-instagram {
-    color: rgb(176, 0, 211);
+  color: rgb(176, 0, 211);
 }
