--- a/Front-end/css/forms.css
+++ b/Front-end/css/forms.css
@@ -3,66 +3,56 @@
     border: 0;
     padding: 0;
     box-sizing: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Rubik", sans-serif;
+    text-align: center;
 }
 
 body {
-    background-color: rgb(227, 229, 231);
-    background-repeat: no-repeat;
-    position: relative;
+    background: rgb(217, 217, 217);
 }
 
 .wrapper {
     background: rgb(255, 255, 255); 
-    width: 400px;
-    height: 520px;
-    border: rgb(24, 71, 226) solid;
-    position: relative;
-    margin: 50px 500px 0px 500px;
-    border-radius: 5px;
+    margin: 0 auto;
+    width: 500px;
+    height: 680px;
+    margin-top: 100px;
+    border-radius: 8px;
 }
 
-h3 {
-    margin: 15px 20px 5px 20px;
+h1 {
+    margin-top: 50px;
     font-size: 20px;
-    color: #000;
-    font-family: Arial,sans-serif;
-    text-align: center;
-    padding: 15px;
+    color: #080e45;
 }
 
 p {
-    margin-top: 20px;
     font-size: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
 }
 
 img {
-    height:80px;
+    height:100px;
     width: 120px;
-    margin: 0 140px 20px;
-    
+    margin-top: 35px;
 }
 
 .form {
-    margin: 0px 25px 15px 25px;
+    margin-bottom: 20px;
     padding: 15px;
     width: 320px;
-    border: solid 2px black;
-    border-radius: 5px;
+    border: solid 1.5px #333;
+    border-radius: 8px;
+    text-align: start;
 }
-
-.form {
-    position: relative;
+.field {
+    margin-top: 30px;
 }
-
 #cadastro {
-    margin: 20px 25px 0px 25px;
+    margin-top: 20px;
     padding: 13px;
     width: 353px;
     border-radius: 5px;
-    background-color: black;
+    background-color:#080e45;
     color: white;
     display: inline-block;
     cursor: pointer;
@@ -73,9 +63,11 @@ img {
 }
 
 .login {
+    margin-top: 5px;
     padding: 30px 70px; 
-    text-align: center;
-    color: #000;
+}
+.login p {
+    margin-top: 100px;
 }
 
 .login a {
