--- a/Front-end/css/data.css
+++ b/Front-end/css/data.css
@@ -72,7 +72,8 @@ fieldset .content {
 @media screen and (max-width: 999px) {
   .dataset {
     padding: 0;
-    margin-top: 60px;
+    margin: 0;
+    background-color: white;
     display: flex;
     flex-direction: column;
   }
@@ -85,8 +86,5 @@ fieldset .content {
   fieldset .content {
     display: flex;
     flex-direction: column;
-  }
-  .dataset {
-    margin-top: 0;
   }
 }
