--- a/Front-end/css/login.css
+++ b/Front-end/css/login.css
@@ -17,7 +17,7 @@ h1 {
     margin-top: 20px;
     margin-bottom: 30px;
     font-size: 20px;
-    color: rgb(43, 41, 41);
+    color: #080e45;
     text-transform: uppercase;
 }
 #main-container{
@@ -34,6 +34,7 @@ h1 {
     color: rgb(58, 58, 58);
     text-align: start;
 }
+
 .login {
     padding: 10px;
     font-size: 1rem;
